--- a/index.html
+++ b/index.html
@@ -89,6 +89,21 @@
 
 				scene = new THREE.Scene();
 
+// 		material = new THREE.ParticleBasicMaterial( { map: ImageUtils.loadTexture( 'textures/nova_particle.png' ), blending: THREE.AdditiveBlending } );
+// 
+// 		for ( var i = 0; i < 1000; i ++ ) {
+// 			particle = new THREE.Particle( material );
+// 			particle.position.x = Math.random() * 40 - 20;
+// 			particle.position.y = Math.random() * 40 - 20;
+// 			particle.position.z = Math.random() * 40 - 20;
+// 			particle.scale.x = particle.scale.y = Math.random() * 3;
+// 			scene.addObject( particle );
+// 		}
+// 
+// 		particle = new THREE.Particle( new THREE.ParticleBasicMaterial( { map: ImageUtils.loadTexture( 'textures/sun.png' ), blending: THREE.AdditiveBlending } ) );
+// 		scene.addObject( particle );
+
+
 				init_sky();
 				//init_cylinder();
 				init_grid();
@@ -124,7 +139,7 @@
 // 					loadTexture( 'textures/skybox/night_7.jpg' )  // front
 				];
 
-				mesh = new THREE.Mesh( new Cube( option_SolarSystem3DSizeXZ*2, option_SolarSystem3DSizeXZ*2, option_SolarSystem3DSizeXZ*2, 7, 7, materials, true ), new THREE.MeshFaceMaterial() );
+				mesh = new THREE.Mesh( new Cube( option_SolarSystem3DSizeXZ*5, option_SolarSystem3DSizeXZ*5, option_SolarSystem3DSizeXZ*5, 7, 7, materials, true ), new THREE.MeshFaceMaterial() );
 				mesh.overdraw = true;
 				scene.addObject( mesh );			
 			}
@@ -185,6 +200,11 @@
 			function init_planets() {
 				Celestial.init(planet_init_list,option_SolarSystem3DSizeXZ,option_SolarSystem3DSizeY);
 
+				var resolution = 60;
+				var size = 360 / resolution;
+			
+				material = new THREE.LineBasicMaterial( { color: 0x008080, opacity: 0.5, blending: THREE.AdditiveBlending } );
+
 				for ( var i = 0, l = Celestial.planetsCount(); i < l; i ++ ) {
 					var mesh = create_planet(i);
 					if (Celestial.planetInfo(i,'type') == 'star') {
@@ -192,10 +212,27 @@
 								   	   new THREE.MeshBasicMaterial( { color: 0x665500, blending: THREE.AdditiveBlending }) );
 						meshstar.overdraw = true;
 						scene.addObject( meshstar );
-					}
-						
+					} else {
+						//For each step of the planet's location, build a series of orbit lines
+						var orbitepochstep = Celestial.Planets[i].orbit_sidereal_in_days / resolution;
+						geometry = new THREE.Geometry();		
+						for ( var j = 0; j <= resolution; j ++ ) {		
+							segment = ( j * size ) * Math.PI / 180;
+							var orbitepoch = orbitepochstep * (j+1);
+							var orbitpos = Celestial.planetLocation(i,orbitepoch);
+							geometry.vertices.push( new THREE.Vertex( new THREE.Vector3(
+								orbitpos.position.x,
+								orbitpos.position.y,
+								orbitpos.position.z)));
+						}
+						line = new THREE.Line( geometry, material );
+						scene.addObject( line );
+
+					}						
 					planetmeshlist.push( mesh );
 					scene.addObject( mesh );
+
+
 				}
 			
 				console.log('Planets created and added to Scene.  SceneObjects now:'+scene.objects.length);
